# hArI

./: .gitignore  LICENSE  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
core/: file_processor.py  memory.py  query_intent.py  responser.py  utils.py
prompts/: system_prompt.md
rag/: embedder.py  retriever.py  vector_store.py
ui/: components.py  handlers.py  state.py  styles.py
